--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,57 +2,32 @@ version: '3.0'
 
 services:
   database:
-    image: postgres:15.3-alpine
-    container_name: tuva-database
-    hostname: database
+    image: postgres:16.1
+    container_name: progbook-database
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     env_file:
       - .env
     expose: 
       - 5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   server:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
     volumes:
-      - .:/opt
+      - ./app:/opt/app
     ports:
       - 8000:8000
     env_file:
       - .env
     entrypoint: bash ./script/entrypoint.sh server
+    depends_on:
+      database:
+        condition: service_healthy
     restart: always
-      
-  redis:
-    image: redis:5
-    expose: 
-      - 6379
-
-  celery_worker:
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile
-    env_file:
-      - .env
-    depends_on:
-      - server
-      - redis
-    entrypoint: bash ./script/celery.sh worker
-        
-  flower:
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile
-    container_name: tuva-celery_flower
-    hostname: celery_flower
-    env_file:
-      - .env
-    ports:
-      - 5555:5555
-    depends_on:
-      - integration
-      - redis
-      - celery_worker
-    entrypoint: bash ./script/celery.sh flower
