chore: add alembic and asyncpg packages in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ fastapi = "^0.109.0"
 uvicorn = "^0.26.0"
 sqlalchemy = "^2.0.25"
 uuid7 = "^0.1.0"
+alembic = "^1.13.1"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.14"
