--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.0'
 services:
   database:
     image: postgres:16.1
-    container_name: progbook-database
+    container_name: proglib-database
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     env_file:
@@ -11,15 +11,16 @@ services:
     expose: 
       - 5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
+      test: [ "CMD-SHELL", "pg_isready -U $DATABASE_USER -d $DATABASE_NAME -h localhost -p 5432" ]
+      interval: 2s
+      timeout: 2s
       retries: 5
 
   server:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
+    container_name: proglib-server
     volumes:
       - ./app:/opt/app
     ports:
