--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ asyncpg = "^0.29.0"
 ruff = "^0.1.14"
 pyright = "^1.1.347"
 ipython = "^8.20.0"
+ruff-lsp = "^0.0.49"
 
 [build-system]
 requires = ["poetry-core"]
