--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,25 +2,20 @@ version: '3.0'
 
 services:
   database:
-    image: postgres:16.1
-    container_name: proglib-database
+    image: mongo:6.0.13
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./mongodb:/data/db
+    container_name: mongodb
     env_file:
       - .env
-    expose: 
-      - 5432
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $DATABASE_USER -d $DATABASE_NAME -h localhost -p 5432" ]
-      interval: 2s
-      timeout: 2s
-      retries: 5
+    ports: 
+      - 27017:27017
 
   server:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
-    container_name: proglib-server
+    container_name: backend
     volumes:
       - ./app:/opt/app
     ports:
@@ -28,7 +23,4 @@ services:
     env_file:
       - .env
     entrypoint: bash ./script/entrypoint.sh server
-    depends_on:
-      database:
-        condition: service_healthy
     restart: always
