--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,13 @@ services:
     ports: 
       - 27017:27017
 
-  server:
+  backend:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
     container_name: time_tracker-backend
     volumes:
-      - app:/opt/app
+      - ./app:/opt/app
     ports:
       - 8000:8000
     env_file:
